--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.3",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
+    "react-clock": "^3.0.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -47,7 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.2"
+    "@capacitor/cli": "2.4.2",
+    "@types/react-clock": "^3.0.0"
   },
   "description": "An Ionic project"
 }
