--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.4.2",
+    "@ionic-native/core": "^5.29.0",
+    "@ionic-native/image-picker": "^5.29.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@material-ui/core": "^4.11.0",
@@ -17,6 +19,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "cordova-plugin-telerik-imagepicker": "^2.3.5",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-clock": "^3.0.0",
